--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <name>Kaifeng Zhang</name>
                   </p>
                   <p>
-                    I am a first-year Ph.D. student in computer science at UIUC, advised by <a href="https://yunzhuli.github.io/">Prof. Yunzhu Li</a>.
+                    I am a Ph.D. student in computer science at Columbia University, advised by <a href="https://yunzhuli.github.io/">Prof. Yunzhu Li</a>.
                   </p>
                   <p>  
                     Previously, I was an undergraduate student at Tsinghua University majoring in computer science (Yao class).
@@ -38,7 +38,7 @@
                     and <a href="https://yang-gao.weebly.com/">Prof. Yang Gao</a> from Tsinghua University.
                   </p> -->
                   <p style="text-align:center">
-                    <a href="mailto:kaifeng9@illinois.edu">Email</a> &nbsp/&nbsp
+                    <a href="mailto:kaifeng.z@columbia.edu">Email</a> &nbsp/&nbsp
                     <!--<a href="files/resume.pdf">CV</a> &nbsp/&nbsp-->
                     <a href="https://scholar.google.com/citations?user=jwkE2lgAAAAJ">Google Scholar</a> &nbsp/&nbsp
                     <a href="https://github.com/kywind/">Github</a> &nbsp/&nbsp
@@ -86,6 +86,39 @@
               </tr>
             </tbody>
           </table>
+
+          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+            <tbody>
+              <tr>
+                <td style="padding:20px;width:30%;vertical-align:middle">
+                  <img src='images/adaptigraph-min.jpg' width="200">
+                </td>
+                <td style="padding:20px;width:70%;vertical-align:middle">
+                  <a href="https://arxiv.org/abs/2210.07199">
+                    <papertitle>
+                      AdaptiGraph: Material-Adaptive Graph-Based Neural Dynamics for Robotic Manipulation
+                    </papertitle>
+                  </a>
+                  <br>
+                  <strong>Kaifeng Zhang*</strong>,
+                  Baoyu Li, 
+                  Kris Hauser, 
+                  Yunzhu Li
+                  <br>
+                  <em>Robotics: Science and Systems (RSS)</em>, 2024;
+                  <br>
+                  <strong><font color='#b70000'>Best Abstract Award,</strong></font> <em>ICRA RMDO Workshop, 2024.
+                  <br>
+                  <a href="https://robopil.github.io/adaptigraph/">project page</a>
+                  /
+                  <a href="https://arxiv.org/abs/2407.07889">arXiv</a>
+                  /
+                  <a href="https://arxiv.org/pdf/2407.07889.pdf">pdf</a>
+                  /
+                  <a href="https://github.com/Boey-li/AdaptiGraph">code</a>
+                </td>
+              </tr>
+          </table>
           
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
@@ -116,11 +149,11 @@
                   <a href="https://arxiv.org/pdf/2210.07199.pdf">pdf</a>
                   /
                   <a href="https://github.com/kywind/self-corr-pose">code</a>
-                  <p>
+                  <!-- <p>
                     We propose a self-supervised method for category-level 6D object pose estimation 
                     by learning dense 2D-3D geometric correspondences. Our method can train on in-the-wild RGB/RGBD image collections
                     without any 3D annotations. 
-                  </p>
+                  </p> -->
                 </td>
               </tr>
           </table>
@@ -150,10 +183,10 @@
                   <a href="https://arxiv.org/pdf/2207.10456.pdf">pdf</a>
                   /
                   <a href="https://github.com/Yingdong-Hu/SFC">code</a>
-                  <p>
+                  <!-- <p>
                     We show that fine-grained features learned with low-level contrastive objectives are 
                     complementary to semantic features from image-level SSL methods. Fusing these features can significantly improve the performance for downstream tasks.
-                  </p>
+                  </p> -->
                 </td>
               </tr>
             </tbody>
