--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
                   <p>
                     I am a Ph.D. student in computer science at Columbia University, advised by <a href="https://yunzhuli.github.io/">Prof. Yunzhu Li</a>.
                   </p>
-                  <p>  
-                    Previously, I was an undergraduate student at Tsinghua University majoring in computer science (Yao class).
-                  </p>
-                  <!-- <p>
-                    My research interest is in computer vision, machine learning and robotics.
-                    During my undergrad, I am very fortunate to have worked with <a href="https://xiaolonw.github.io/">Prof. Xiaolong Wang</a> from UC San Diego, 
+                  
+                  <p>
+                    My research interest is at the intersection of robotics, machine learning and computer vision. 
+                    I am interested in using learning-based methods to make robots perceive and understand the physical world robustly and generalizably.
+                  <p> 
+                    I am very fortunate to have worked with <a href="https://xiaolonw.github.io/">Prof. Xiaolong Wang</a> from UC San Diego, 
                     and <a href="https://yang-gao.weebly.com/">Prof. Yang Gao</a> from Tsinghua University.
-                  </p> -->
+                  </p>
                   <p style="text-align:center">
                     <a href="mailto:kaifeng.z@columbia.edu">Email</a> &nbsp/&nbsp
                     <!--<a href="files/resume.pdf">CV</a> &nbsp/&nbsp-->
@@ -46,8 +46,8 @@
                     <a href="https://www.linkedin.com/in/kaifeng-zhang-7b971625b/">Linkedin</a>-->
                   </p>
                 </td>
-                <td style="padding:2.5%;width:25%;max-width:25%">
-                  <img style="width:100%;max-width:100%;border-radius:50%" alt="profile photo" src="images/profile.jpg" class="hoverZoomLink"></a>
+                <td style="padding:0%;width:25%;max-width:25%">
+                  <img style="width:100%;max-width:100%;border-radius:50%" alt="profile photo" src="images/profile2.jpg" class="hoverZoomLink"></a>
                 </td>
               </tr>
             </tbody>
@@ -191,80 +191,28 @@
               </tr>
             </tbody>
           </table>
-<!--
-          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+
+          <!-- <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
               <tr>
                 <td style="padding:20px;width:100%;vertical-align:middle">
-                  <heading>Misc</heading>
-                  <p>
-                      <li>
-                        Some of my interesting <a href="javascript:;" onclick="showProjects()">course projects</a>
-                      </li>
-                      <div class="projects" id="projects" style="display: none">
-                        <br>
-                        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-                          <tbody>
-                            <tr>
-                              <td style="padding:10px;width:100%;vertical-align:middle">
-                                <em>AI+X project</em>
-                                <br>
-                                A Statistical Study of Integrated Livestock-Fish Production in Myanmar using Satellite Imagery
-                                <br>
-                                <a href="https://github.com/PKUCER/YONGONCHICKENFISH">GitHub</a>
-                                /
-                                <a href="files/AIX-report.pdf">pdf</a>
-                                /
-                                <a href="https://youtu.be/mofpT3WzhaU?">video (in Chinese)</a>
-                              </td>
-                            </tr>
-                        </table>
-                        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-                          <tbody>
-                              <td style="padding:10px;width:100%;vertical-align:middle">
-                                <em>Fall 2021, Intelligent System and Robotics</em>
-                                <br>
-                                Quadruped Locomotion with Reinforcement Learning and Visual Signal
-                                <br>
-                                <a href="https://github.com/kywind/Robotics-Project">GitHub</a>
-                                /
-                                <a href="files/robotics-report.pdf">pdf</a>
-                              </td>
-                            </tr>
-                        </table>
-                        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-                          <tbody>
-                            <tr>
-                              <td style="padding:10px;width:100%;vertical-align:middle">
-                                <em>Fall 2021, Advanced Computer Graphics</em>
-                                <br>
-                                Ray Tracing and Path Tracing
-                                <br>
-                                <a href="https://github.com/kywind/path-tracing">GitHub</a>
-                              </td>
-                            </tr>
-                        </table>
-                        <br>
-                      </div>
-                      <li>
-                        How to pronounce my name? Try this:  Kaifeng -> 'kai-fuhng'. Zhang -> 'jahng'.
-                      </li>
-                      <li>
-                        My WeChat ID is <strong>kywindz</strong>. You can drop me a friend request if you feel more comfortable to chat this way.
-                      </li>
-                  </p>
+                  <heading>Experiences</heading>
                 </td>
               </tr>
             </tbody>
-          </table>
--->
+          </table> -->
+
+          <!-- <p>
+            Previously, I was an undergraduate student at Tsinghua University majoring in computer science (Yao class).
+          </p> -->
+
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
               <tr>
                 <td style="padding: 0px">
                   <br>
                   <p style="text-align:right;font-size:small">
-                    Borrowed from <a href="https://jonbarron.info/">Jon Barron</a>
+                    Borrowed from <a href="https://jonbarron.info/" style="font-size:small">Jon Barron</a>
                   </p>
                 </td>
               </tr>
