--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                   <br>
                   <em>Robotics: Science and Systems (RSS)</em>, 2024;
                   <br>
-                  <em>ICRA RMDO Workshop, 2024. <strong><font color='#b70000'>(Best Abstract Award)</strong></font>
+                  <em>ICRA RMDO Workshop</em>, 2024. <strong><font color='#b70000'>(Best Abstract Award)</strong></font>
                   <br>
                   <a href="https://robopil.github.io/adaptigraph/">project page</a>
                   /
