--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <tbody>
               <tr>
                 <td style="padding:20px;width:30%;vertical-align:middle">
-                  <img src='images/self-pose-min.png' width="200">
+                  <img src='images/self-pose-min.jpg' width="200">
                 </td>
                 <td style="padding:20px;width:70%;vertical-align:middle">
                   <a href="https://arxiv.org/abs/2210.07199">
