--- a/index.html
+++ b/index.html
@@ -15,27 +15,27 @@
 <script async type="text/javascript" src="static/js/index.js"></script>
 
 <body>
-  <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+  <table style="width:100%;max-width:1200px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
     <tbody>
       <tr style="padding:0px">
         <td style="padding:0px">
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
               <tr style="padding:0px">
-                <td style="padding:2.5%;width:70%;vertical-align:middle">
+                <td style="padding:2.5%;width:75%;vertical-align:middle">
                   <p style="text-align:center">
                     <name>Kaifeng Zhang</name>
                   </p>
                   <p>
-                    I am a Ph.D. student in computer science at Columbia University, advised by <a href="https://yunzhuli.github.io/">Prof. Yunzhu Li</a>.
+                    I am a second-year Ph.D. student in computer science at <a href="https://columbia.edu/">Columbia University</a>, advised by <a href="https://yunzhuli.github.io/">Prof. Yunzhu Li</a>. 
+                    I obtained by Bachelors degree from <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a> <a href="https://iiis.tsinghua.edu.cn/en/">(Yao Class)</a>, where I worked with <a href="https://yang-gao.weebly.com/">Prof. Yang Gao</a> 
+                    and <a href="https://ericyi.github.io/">Prof. Li Yi</a>, and interned at <a href="https://ucsd.edu/">UC San Diego</a> with <a href="https://xiaolonw.github.io/">Prof. Xiaolong Wang</a>.
+                    Prior to joining Columbia, I spent one year at <a href="https://illinois.edu/">UIUC</a>, where I was fortunate to collaborate with <a href="https://kkhauser.web.illinois.edu/">Prof. Kris Hauser</a>.
                   </p>
-                  
                   <p>
-                    My research interest is at the intersection of robotics, machine learning and computer vision. 
-                    I am interested in using learning-based methods to make robots perceive and understand the physical world robustly and generalizably.
-                  <p> 
-                    I am very fortunate to have worked with <a href="https://xiaolonw.github.io/">Prof. Xiaolong Wang</a> from UC San Diego, 
-                    and <a href="https://yang-gao.weebly.com/">Prof. Yang Gao</a> from Tsinghua University.
+                    My research interest is at the intersection of robotics, computer vision and machine learning.
+                    My research goal is to develop robot systems that perceive and interact with the physical world robustly and generalizably. 
+                    Driven by this goal, I focus on topics including 3D reconstruction, physics model learning, and deformable object manipulation.
                   </p>
                   <p style="text-align:center">
                     <a href="mailto:kaifeng.z@columbia.edu">Email</a> &nbsp/&nbsp
@@ -57,10 +57,17 @@
             <tbody>
               <tr>
                 <td style="padding:20px;width:100%;vertical-align:middle">
-                  <heading>Updates</heading>
+                  <heading>News</heading>
                   <p>
                       <li>
-                        [2024.8] After a wonderful year at UIUC, I will be joining Columbia University to continue persuing my PhD.
+                        [2024.9] One paper gets accepted to CoRL 2024.
+                      </li>
+                      <li>
+                        [2024.8] After a wonderful year at UIUC, I will be joining Columbia University to continue my PhD.
+                      </li>
+                      <li>
+                        [2024.5] <a href="https://robopil.github.io/adaptigraph/">AdaptiGraph</a> is selected as the Best Abstract Award (Top 1) at the 
+                        <a href="https://deformable-workshop.github.io/icra2024/">4th RMDO Workshop @ ICRA2024</a>.
                       </li>
                       <li>
                         [2024.5] <a href="https://robopil.github.io/adaptigraph/">AdaptiGraph</a> is accepted to RSS 2024.
@@ -97,7 +104,9 @@
             <tbody>
               <tr>
                 <td style="padding:20px;width:30%;vertical-align:middle">
-                  <img src='images/adaptigraph-min.jpg' width="200">
+                  <video autoplay muted loop playsinline height="100%">
+                    <source src="vids/main/adaptigraph.mp4" type="video/mp4">
+                  </video>
                 </td>
                 <td style="padding:20px;width:70%;vertical-align:middle">
                   <a href="https://arxiv.org/abs/2407.07889">
@@ -111,9 +120,9 @@
                   Kris Hauser, 
                   Yunzhu Li
                   <br>
-                  <em>Robotics: Science and Systems (RSS)</em>, 2024;
+                  Robotics: Science and Systems (RSS), 2024;
                   <br>
-                  <em>ICRA RMDO Workshop</em>, 2024. <strong><font color='#b70000'>(Best Abstract Award)</strong></font>
+                  ICRA RMDO Workshop, 2024. <strong><font color='#b70000'>(Best Abstract Award)</strong></font>
                   <br>
                   <a href="https://robopil.github.io/adaptigraph/">project page</a>
                   /
@@ -130,7 +139,9 @@
             <tbody>
               <tr>
                 <td style="padding:20px;width:30%;vertical-align:middle">
-                  <img src='images/self-pose-min.jpg' width="200">
+                  <video autoplay muted loop playsinline height="100%">
+                    <source src="vids/main/self-pose.mp4" type="video/mp4">
+                  </video>
                 </td>
                 <td style="padding:20px;width:70%;vertical-align:middle">
                   <a href="https://arxiv.org/abs/2210.07199">
@@ -146,7 +157,7 @@
                   Fatih Porikli,
                   Xiaolong Wang
                   <br>
-                  <em>International Conference on Learning Representations (ICLR)</em>, 2023.
+                  International Conference on Learning Representations (ICLR), 2023.
                   <br>
                   <a href="https://kywind.github.io/self-pose">project page</a>
                   /
@@ -168,7 +179,7 @@
             <tbody>
               <tr>
                 <td style="padding:20px;width:30%;vertical-align:middle">
-                  <img src='images/sfc-min.jpg' width="200">
+                  <img src='images/sfc-full.png' height="100%">
                 </td>
                 <td style="padding:20px;width:70%;vertical-align:middle">
                   <a href="https://arxiv.org/abs/2207.10456">
@@ -182,7 +193,7 @@
                   <strong>Kaifeng Zhang</strong>,
                   Yang Gao
                   <br>
-                  <em>European Conference on Computer Vision (ECCV)</em>, 2022. <strong><font color='#b70000'>(Oral)</font></strong>
+                  European Conference on Computer Vision (ECCV), 2022. <strong><font color='#b70000'>(Oral)</font></strong>
                   <br>
                   <a href="https://arxiv.org/abs/2207.10456">arXiv</a>
                   /
@@ -203,8 +214,8 @@
               <tr>
                 <td style="padding: 0px">
                   <br>
-                  <p style="text-align:right">
-                    Template borrowed from <a href="https://jonbarron.info/">Jon Barron</a>
+                  <p style="text-align:right;font-size:16px">
+                    Template borrowed from <a href="https://jonbarron.info/" style="font-size:16px">Jon Barron</a>
                   </p>
                 </td>
               </tr>
