--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <script async type="text/javascript" src="static/js/index.js"></script>
 
 <body>
-  <table style="width:100%;max-width:1200px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+  <table style="width:100%;max-width:1000px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
     <tbody>
       <tr style="padding:0px">
         <td style="padding:0px">
@@ -104,7 +104,7 @@
             <tbody>
               <tr>
                 <td style="padding:20px;width:30%;vertical-align:middle">
-                  <video autoplay muted loop playsinline height="100%">
+                  <video autoplay muted loop playsinline width="300px">
                     <source src="vids/main/adaptigraph.mp4" type="video/mp4">
                   </video>
                 </td>
@@ -139,7 +139,7 @@
             <tbody>
               <tr>
                 <td style="padding:20px;width:30%;vertical-align:middle">
-                  <video autoplay muted loop playsinline height="100%">
+                  <video autoplay muted loop playsinline width="300px">
                     <source src="vids/main/self-pose.mp4" type="video/mp4">
                   </video>
                 </td>
@@ -179,7 +179,7 @@
             <tbody>
               <tr>
                 <td style="padding:20px;width:30%;vertical-align:middle">
-                  <img src='images/sfc-full.png' height="100%">
+                  <img src='images/sfc-full.png' width="300px">
                 </td>
                 <td style="padding:20px;width:70%;vertical-align:middle">
                   <a href="https://arxiv.org/abs/2207.10456">
