--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
                   Kris Hauser, 
                   Yunzhu Li
                   <br>
-                  Robotics: Science and Systems (RSS), 2024;
+                  Robotics: Science and Systems (RSS), 2024
                   <br>
-                  ICRA RMDO Workshop, 2024. <strong><font color='#b70000'>(Best Abstract Award)</strong></font>
+                  ICRA RMDO Workshop, 2024 <strong><font color='#b70000'>(Best Abstract Award)</strong></font>
                   <br>
                   <a href="https://robopil.github.io/adaptigraph/">project page</a>
                   /
@@ -157,7 +157,7 @@
                   Fatih Porikli,
                   Xiaolong Wang
                   <br>
-                  International Conference on Learning Representations (ICLR), 2023.
+                  International Conference on Learning Representations (ICLR), 2023
                   <br>
                   <a href="https://kywind.github.io/self-pose">project page</a>
                   /
@@ -193,7 +193,7 @@
                   <strong>Kaifeng Zhang</strong>,
                   Yang Gao
                   <br>
-                  European Conference on Computer Vision (ECCV), 2022. <strong><font color='#b70000'>(Oral)</font></strong>
+                  European Conference on Computer Vision (ECCV), 2022 <strong><font color='#b70000'>(Oral)</font></strong>
                   <br>
                   <a href="https://arxiv.org/abs/2207.10456">arXiv</a>
                   /
