--- a/index.html
+++ b/index.html
@@ -105,6 +105,36 @@
               <tr>
                 <td style="padding:20px;width:30%;vertical-align:middle">
                   <video autoplay muted loop playsinline width="300px">
+                    <source src="vids/main/gaussian-gbnd.mp4" type="video/mp4">
+                  </video>
+                </td>
+                <td style="padding:20px;width:70%;vertical-align:middle">
+                  <a href="https://kywind.github.io">
+                    <papertitle>
+                      Dynamic 3D Gaussian Tracking for Graph-Based Neural Dynamics Modeling
+                    </papertitle>
+                  </a>
+                  <br>
+                  <a href="https://robo-alex.github.io/">Mingtong Zhang</a>*, 
+                  <strong><a href="https://kywind.github.io/">Kaifeng Zhang</a>*</strong>,
+                  <a href="https://yunzhuli.github.io/">Yunzhu Li</a>
+                  <br>
+                  Conference on Robot Learning (CoRL), 2024
+                  <br>
+                  <a href="https://gaussian-gbnd.github.io/">website</a>
+                  /
+                  <a href="https://openreview.net/forum?id=itKJ5uu1gW">paper</a>
+                  /
+                  <em>More coming soon!</em>
+                </td>
+              </tr>
+          </table>
+
+          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+            <tbody>
+              <tr>
+                <td style="padding:20px;width:30%;vertical-align:middle">
+                  <video autoplay muted loop playsinline width="300px">
                     <source src="vids/main/adaptigraph.mp4" type="video/mp4">
                   </video>
                 </td>
@@ -115,10 +145,10 @@
                     </papertitle>
                   </a>
                   <br>
-                  <strong>Kaifeng Zhang*</strong>,
-                  Baoyu Li, 
-                  Kris Hauser, 
-                  Yunzhu Li
+                  <strong><a href="https://kywind.github.io/">Kaifeng Zhang</a>*</strong>,
+                  <a href="https://scholar.google.com/citations?user=pFeywbYAAAAJ&hl=en">Baoyu Li</a>*, 
+                  <a href="https://kkhauser.web.illinois.edu/">Kris Hauser</a>, 
+                  <a href="https://yunzhuli.github.io/">Yunzhu Li</a>
                   <br>
                   Robotics: Science and Systems (RSS), 2024
                   <br>
@@ -134,13 +164,43 @@
                 </td>
               </tr>
           </table>
+
+          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+            <tbody>
+              <tr>
+                <td style="padding:20px;width:30%;vertical-align:middle">
+                  <img src='images/4drecons.jpg' width="300px">
+                </td>
+                <td style="padding:20px;width:70%;vertical-align:middle">
+                  <a href="https://arxiv.org/abs/2406.10167">
+                    <papertitle>
+                      4DRecons: 4D Neural Implicit Deformable Objects Reconstruction from a single RGB-D Camera with Geometrical and Topological Regularizations
+                    </papertitle>
+                  </a>
+                  <br>
+                  <a href="https://xy-cong.github.io/">Xiaoyan Cong</a>,
+                  <a href="https://yanghtr.github.io/">Haitao Yang</a>,
+                  <a href="https://scholar.google.com/citations?user=ppaEV-8AAAAJ&hl=en">Liyan Chen</a>,
+                  <strong><a href="https://kywind.github.io/">Kaifeng Zhang</a></strong>,
+                  <a href="https://ericyi.github.io/">Li Yi</a>,
+                  <a href="https://www.cs.utexas.edu/~bajaj/cvc/index.shtml">Chandrajit Bajaj</a>,
+                  <a href="https://www.cs.utexas.edu/~huangqx/index.html">Qixing Huang</a>
+                  <br>
+                  Arxiv, 2024
+                  <br>
+                  <a href="https://arxiv.org/abs/2406.10167">arXiv</a>
+                  /
+                  <a href="https://arxiv.org/pdf/2406.10167.pdf">pdf</a>
+                </td>
+              </tr>
+          </table>
           
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
               <tr>
                 <td style="padding:20px;width:30%;vertical-align:middle">
                   <video autoplay muted loop playsinline width="300px">
-                    <source src="vids/main/self-pose.mp4" type="video/mp4">
+                    <source src="vids/main/self-pose-2.mp4" type="video/mp4">
                   </video>
                 </td>
                 <td style="padding:20px;width:70%;vertical-align:middle">
@@ -150,12 +210,12 @@
                     </papertitle>
                   </a>
                   <br>
-                  <strong>Kaifeng Zhang</strong>,
-                  Yang Fu, 
-                  Shubhankar Borse, 
-                  Hong Cai, 
-                  Fatih Porikli,
-                  Xiaolong Wang
+                  <strong><a href="https://kywind.github.io/">Kaifeng Zhang</a></strong>,
+                  <a href="https://oasisyang.github.io/">Yang Fu</a>, 
+                  <a href="https://scholar.google.com/citations?user=ZsgWCyMAAAAJ&hl=en">Shubhankar Borse</a>, 
+                  <a href="https://scholar.google.com/citations?user=9y3Kd3cAAAAJ&hl=en">Hong Cai</a>, 
+                  <a href="https://www.porikli.com/">Fatih Porikli</a>,
+                  <a href="https://xiaolonw.github.io/">Xiaolong Wang</a>
                   <br>
                   International Conference on Learning Representations (ICLR), 2023
                   <br>
@@ -188,10 +248,10 @@
                     </papertitle>
                   </a>
                   <br>
-                  Yingdong Hu, 
-                  Renhao Wang, 
-                  <strong>Kaifeng Zhang</strong>,
-                  Yang Gao
+                  <a href="https://yingdong-hu.github.io/">Yingdong Hu</a>, 
+                  <a href="https://renwang435.github.io/">Renhao Wang</a>, 
+                  <strong><a href="https://kywind.github.io/">Kaifeng Zhang</a></strong>,
+                  <a href="https://yang-gao.weebly.com/">Yang Gao</a>
                   <br>
                   European Conference on Computer Vision (ECCV), 2022 <strong><font color='#b70000'>(Oral)</font></strong>
                   <br>
