--- a/index.html
+++ b/index.html
@@ -28,14 +28,16 @@
                   </p>
                   <p>
                     I am a second-year Ph.D. student in computer science at <a href="https://columbia.edu/">Columbia University</a>, advised by <a href="https://yunzhuli.github.io/">Prof. Yunzhu Li</a>. 
-                    I obtained by Bachelors degree from <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a> <a href="https://iiis.tsinghua.edu.cn/en/">(Yao Class)</a>, where I worked with <a href="https://yang-gao.weebly.com/">Prof. Yang Gao</a> 
-                    and <a href="https://ericyi.github.io/">Prof. Li Yi</a>, and interned at <a href="https://ucsd.edu/">UC San Diego</a> with <a href="https://xiaolonw.github.io/">Prof. Xiaolong Wang</a>.
-                    Prior to joining Columbia, I spent one year at <a href="https://illinois.edu/">UIUC</a>, where I was fortunate to collaborate with <a href="https://kkhauser.web.illinois.edu/">Prof. Kris Hauser</a>.
+                    I obtained my Bachelors degree from <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a> <a href="https://iiis.tsinghua.edu.cn/en/">(Yao Class)</a>, where I worked with <a href="https://yang-gao.weebly.com/">Prof. Yang Gao</a> 
+                    and <a href="https://ericyi.github.io/">Prof. Li Yi</a>. I also interned at <a href="https://ucsd.edu/">UC San Diego</a>, collaborating with <a href="https://xiaolonw.github.io/">Prof. Xiaolong Wang</a>.
+                    Prior to joining Columbia, I completed a year of graduate study at <a href="https://illinois.edu/">UIUC</a>.
                   </p>
                   <p>
-                    My research interest is at the intersection of robotics, computer vision and machine learning.
-                    My research goal is to develop robot systems that perceive and interact with the physical world robustly and generalizably. 
-                    Driven by this goal, I focus on topics including 3D reconstruction, physics model learning, and deformable object manipulation.
+                    With a broad interest in robotics, computer vision, and machine learning, my research focuses on developing robotic systems capable of understanding the physical world in a generalizable manner. 
+                    Driven by this goal, I explore topics such as 3D reconstruction, learning-based simulation, and planning or policy learning using learned simulators.
+                  </p>
+                  <p>
+                    Feel free to email me if you're interested in discussing about research, collaborations, Ph.D. application, or anything else!
                   </p>
                   <p style="text-align:center">
                     <a href="mailto:kaifeng.z@columbia.edu">Email</a> &nbsp/&nbsp
@@ -109,7 +111,7 @@
                   </video>
                 </td>
                 <td style="padding:20px;width:70%;vertical-align:middle">
-                  <a href="https://kywind.github.io">
+                  <a href="https://gaussian-gbnd.github.io/">
                     <papertitle>
                       Dynamic 3D Gaussian Tracking for Graph-Based Neural Dynamics Modeling
                     </papertitle>
@@ -139,7 +141,7 @@
                   </video>
                 </td>
                 <td style="padding:20px;width:70%;vertical-align:middle">
-                  <a href="https://arxiv.org/abs/2407.07889">
+                  <a href="https://robopil.github.io/adaptigraph/">
                     <papertitle>
                       AdaptiGraph: Material-Adaptive Graph-Based Neural Dynamics for Robotic Manipulation
                     </papertitle>
@@ -204,7 +206,7 @@
                   </video>
                 </td>
                 <td style="padding:20px;width:70%;vertical-align:middle">
-                  <a href="https://arxiv.org/abs/2210.07199">
+                  <a href="https://kywind.github.io/self-pose">
                     <papertitle>
                       Self-Supervised Geometric Correspondence for Category-Level 6D Object Pose Estimation in the Wild
                     </papertitle>
