--- a/index.html
+++ b/index.html
@@ -36,12 +36,7 @@
                     With a broad interest in robotics, computer vision, and machine learning, my research focuses on developing robotic systems capable of understanding the physical world in a generalizable manner. 
                     Driven by this goal, I explore topics such as 3D reconstruction, learning-based simulation, and planning or policy learning using learned simulators.
                   </p>
-                  <p>
-                    Feel free to email me if you're interested in discussing about research, collaborations, Ph.D. application, or anything else!
-                  </p>
                   <p style="text-align:center">
-                    <a href="mailto:kaifeng.z@columbia.edu">Email</a> &nbsp/&nbsp
-                    <!--<a href="files/resume.pdf">CV</a> &nbsp/&nbsp-->
                     <a href="https://scholar.google.com/citations?user=jwkE2lgAAAAJ">Google Scholar</a> &nbsp/&nbsp
                     <a href="https://github.com/kywind/">Github</a> &nbsp/&nbsp
                     <a href="https://twitter.com/kaiwynd">Twitter</a>&nbsp/&nbsp
@@ -130,6 +125,7 @@
                   <em>More coming soon!</em>
                 </td>
               </tr>
+            </tbody>
           </table>
 
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
@@ -165,6 +161,7 @@
                   <a href="https://github.com/Boey-li/AdaptiGraph">code</a>
                 </td>
               </tr>
+            </tbody>
           </table>
 
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
@@ -195,6 +192,7 @@
                   <a href="https://arxiv.org/pdf/2406.10167.pdf">pdf</a>
                 </td>
               </tr>
+            </tbody>
           </table>
           
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
@@ -235,6 +233,7 @@
                   </p> -->
                 </td>
               </tr>
+            </tbody>
           </table>
 
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
@@ -274,15 +273,32 @@
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
               <tr>
+                <td style="padding:20px;width:100%;vertical-align:middle">
+                  <heading>Contact</heading>
+                  <p>
+                    If you wish to discuss with me about research or or anything else, feel free to email me: kaifeng [dot] z [at] columbia [dot] edu
+                  </p>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+
+          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+            <tbody>
+              <tr>
                 <td style="padding: 0px">
                   <br>
-                  <p style="text-align:right;font-size:12px">
+                  <p style="text-align:right;font-size:14px">
                     Template borrowed from <a href="https://jonbarron.info/" style="font-size:12px">Jon Barron</a>
                   </p>
                 </td>
               </tr>
             </tbody>
           </table>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </body>
 
 </html>
