--- a/self-pose.html
+++ b/self-pose.html
@@ -88,6 +88,15 @@
                   <span>Code</span>
                   </a>
               </span>
+              <span class="link-block">
+                <a href="https://x.com/xiaolonw/status/1580767003903606784"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="fab fa-twitter"></i>
+                  </span>
+                  <span>Thread</span>
+                  </a>
+              </span>
 
           </div>
         </div>
