--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                 <td style="padding:20px;width:100%;vertical-align:middle">
                   <heading>Contact</heading>
                   <p>
-                    If you wish to discuss with me about research or or anything else, feel free to email me: kaifeng [dot] z [at] columbia [dot] edu
+                    If you are interested in my work and would like to discuss anything, feel free to email me at: kaifeng [dot] z [at] columbia [dot] edu
                   </p>
                 </td>
               </tr>
