--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                   </video>
                 </td>
                 <td style="padding:20px;width:70%;vertical-align:middle">
-                  <a href="https://gaussian-gbnd.github.io/">
+                  <a href="https://gs-dynamics.github.io/">
                     <papertitle>
                       Dynamic 3D Gaussian Tracking for Graph-Based Neural Dynamics Modeling
                     </papertitle>
@@ -118,7 +118,7 @@
                   <br>
                   Conference on Robot Learning (CoRL), 2024
                   <br>
-                  <a href="https://gaussian-gbnd.github.io/">website</a>
+                  <a href="https://gs-dynamics.github.io/">website</a>
                   /
                   <a href="https://openreview.net/forum?id=itKJ5uu1gW">paper</a>
                   /
