--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                   <br>
                   ICRA RMDO Workshop, 2024 <strong><font color='#b70000'>(Best Abstract Award)</strong></font>
                   <br>
-                  <a href="https://robopil.github.io/adaptigraph/">project page</a>
+                  <a href="https://robopil.github.io/adaptigraph/">website</a>
                   /
                   <a href="https://arxiv.org/abs/2407.07889">arXiv</a>
                   /
@@ -219,7 +219,7 @@
                   <br>
                   International Conference on Learning Representations (ICLR), 2023
                   <br>
-                  <a href="https://kywind.github.io/self-pose">project page</a>
+                  <a href="https://kywind.github.io/self-pose">website</a>
                   /
                   <a href="https://arxiv.org/abs/2210.07199">arXiv</a>
                   /
