--- a/index.html
+++ b/index.html
@@ -120,9 +120,13 @@
                   <br>
                   <a href="https://gs-dynamics.github.io/">website</a>
                   /
-                  <a href="https://openreview.net/forum?id=itKJ5uu1gW">paper</a>
+                  <a href="https://arxiv.org/abs/2410.18912">arXiv</a>
                   /
-                  <em>More coming soon!</em>
+                  <a href="https://arxiv.org/pdf/2410.18912.pdf">pdf</a>
+                  /
+                  <a href="https://github.com/robo-alex/gs-dynamics">code</a>
+                  /
+                  <a href="https://huggingface.co/spaces/kaifz/gs-dynamics">demo</a>
                 </td>
               </tr>
             </tbody>
