--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                     I am a second-year Ph.D. student in computer science at <a href="https://columbia.edu/">Columbia University</a>, advised by <a href="https://yunzhuli.github.io/">Prof. Yunzhu Li</a>. 
                     I obtained my Bachelors degree from <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a> <a href="https://iiis.tsinghua.edu.cn/en/">(Yao Class)</a>, where I worked with <a href="https://yang-gao.weebly.com/">Prof. Yang Gao</a> 
                     and <a href="https://ericyi.github.io/">Prof. Li Yi</a>. I also interned at <a href="https://ucsd.edu/">UC San Diego</a>, collaborating with <a href="https://xiaolonw.github.io/">Prof. Xiaolong Wang</a>.
-                    Prior to joining Columbia, I completed a year of graduate study at <a href="https://illinois.edu/">UIUC</a>.
+                    Prior to joining Columbia, I completed a year of graduate study at <a href="https://illinois.edu/">UIUC</a>, where I was fortunate to collaborate with <a href="https://kkhauser.web.illinois.edu/">Prof. Kris Hauser</a>.
                   </p>
                   <p>
-                    With a broad interest in robotics, computer vision, and machine learning, my research focuses on developing robotic systems capable of understanding the physical world in a generalizable manner. 
-                    Driven by this goal, I explore topics such as 3D reconstruction, learning-based simulation, and planning or policy learning using learned simulators.
+                    With a broad interest in robotics, machine learning and computer vision, my research focuses on developing robotic systems capable of understanding our complex physical world in a generalizable manner. 
+                    Driven by this goal, I explore topics such as 3D reconstruction and learning-based simulation for robotic manipulation.
                   </p>
                   <p style="text-align:center">
                     <a href="https://scholar.google.com/citations?user=jwkE2lgAAAAJ">Google Scholar</a> &nbsp/&nbsp
@@ -63,7 +63,7 @@
                         [2024.8] After a wonderful year at UIUC, I will be joining Columbia University to continue my PhD.
                       </li>
                       <li>
-                        [2024.5] <a href="https://robopil.github.io/adaptigraph/">AdaptiGraph</a> is selected as the Best Abstract Award (Top 1) at the 
+                        [2024.5] <a href="https://robopil.github.io/adaptigraph/">AdaptiGraph</a> is selected as the Best Abstract Award at the 
                         <a href="https://deformable-workshop.github.io/icra2024/">4th RMDO Workshop @ ICRA2024</a>.
                       </li>
                       <li>
@@ -154,7 +154,7 @@
                   <br>
                   Robotics: Science and Systems (RSS), 2024
                   <br>
-                  ICRA RMDO Workshop, 2024 <strong><font color='#b70000'>(Best Abstract Award)</strong></font>
+                  ICRA RMDO Workshop, 2024 <strong><font color='#b70000'>(Best Abstract Award, Top 1)</strong></font>
                   <br>
                   <a href="https://robopil.github.io/adaptigraph/">website</a>
                   /
