--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
                     Prior to joining Columbia, I completed a year of graduate study at <a href="https://illinois.edu/">UIUC</a>, where I was fortunate to collaborate with <a href="https://kkhauser.web.illinois.edu/">Prof. Kris Hauser</a>.
                   </p>
                   <p>
-                    With a broad interest in robotics, machine learning and computer vision, my research focuses on developing robotic systems capable of understanding our complex physical world in a generalizable manner. 
-                    Driven by this goal, I explore topics such as 3D reconstruction and learning-based simulation for robotic manipulation.
+                    My research is at the intersection of robotics, computer vision and machine learning. 
+                    I am interested in developing robotic systems that perceive and understand the environment in a robust and generalizable manner. 
+                    Driven by this goal, I currently explore topics such as 3D reconstruction, learning-based simulation, for object manipulation.
                   </p>
                   <p style="text-align:center">
                     <a href="https://scholar.google.com/citations?user=jwkE2lgAAAAJ">Google Scholar</a> &nbsp/&nbsp
