--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                   <p>
                     My research is at the intersection of robotics, computer vision and machine learning. 
                     I am interested in developing robotic systems that perceive and understand the environment in a robust and generalizable manner. 
-                    Driven by this goal, I currently explore topics such as 3D reconstruction, learning-based simulation, for object manipulation.
+                    Currently, I explore topics including 3D reconstruction and tracking, neural dynamics model learning, and their applications to object manipulation.
                   </p>
                   <p style="text-align:center">
                     <a href="https://scholar.google.com/citations?user=jwkE2lgAAAAJ">Google Scholar</a> &nbsp/&nbsp
