--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
                   </p>
                   <p>
                     My research is at the intersection of robotics, computer vision and machine learning. 
-                    I am interested in developing robotic systems that perceive and understand the environment in a robust and generalizable manner. 
-                    Currently, I explore topics including 3D reconstruction and tracking, neural dynamics model learning, and their applications to object manipulation.
+                    I am interested in developing robotic systems that perceive and understand the 3D physical world. 
                   </p>
                   <p style="text-align:center">
                     <a href="https://scholar.google.com/citations?user=jwkE2lgAAAAJ">Google Scholar</a> &nbsp/&nbsp
