--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                     My research is at the intersection of robotics, computer vision and machine learning. 
                     I am interested in developing robotic systems that perceive and understand the 3D physical world. 
                   </p>
+                  <p> 
+                    <b style="color:rgb(183, 0, 0)">Seeking for a research intern position summer 2025. Please let me know if you would like to chat! </b>
+                  </p>
                   <p style="text-align:center">
                     <a href="https://scholar.google.com/citations?user=jwkE2lgAAAAJ">Google Scholar</a> &nbsp/&nbsp
                     <a href="https://github.com/kywind/">Github</a> &nbsp/&nbsp
